<resources>
    <string name="app_name">Absolute Fit</string>
    <string name="bmi_name">BMI Calculator</string>
    <string name="report_name">Progress Report</string>
    <string name="login_name">Login</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="age">Age         :</string>
    <string name="height">Height :</string>
    <string name="weight">Weight :</string>
    <string name="calculate">Calculate</string>
    <string name="reset">Reset</string>
    <string name="result">Result :</string>
    <string name="under_weight">Under Weight</string>
    <string name="a"><![CDATA[<20]]></string>
    <string name="normal">Normal</string>
    <string name="b">20 - 25</string>
    <string name="over_weight">Over Weight</string>
    <string name="c">25 - 30</string>
    <string name="obese">Obese</string>
    <string name="d">30 - 40</string>
    <string name="morbidly_obese">Morbidly Obese</string>
    <string name="e"><![CDATA[>40]]></string>
    <string name="progress_report">Progress Report</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="action_log_in">Log In</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_maps">Map</string>
    <string name="sign_out">Sign Out</string>
</resources>
